--- a/src/css/common.css
+++ b/src/css/common.css
@@ -18,7 +18,20 @@ input, img {
 .fi_header {
   width: 100%;
   height: 30px;
+  position: relative;
   background: #eeeeee; }
+  .fi_header .fi_header_dingone {
+    position: absolute;
+    width: 64px;
+    height: 30px;
+    background: #fff;
+    left: 1083px;
+    top: 0;
+    font-size: 12px;
+    line-height: 30px;
+    color: #64a131;
+    text-align: center;
+    display: none; }
   .fi_header .fi_header_left {
     width: 314px;
     height: 30px;
@@ -83,7 +96,66 @@ input, img {
 .fi_search {
   width: 100%;
   height: 120px;
-  background: #ffffff; }
+  background: #ffffff;
+  position: relative; }
+  .fi_search .me_address {
+    position: absolute;
+    width: 210px;
+    height: 300px;
+    background: #fff;
+    left: 73px;
+    top: 0;
+    z-index: 200;
+    box-shadow: 0 0 8px #ddd;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    display: none; }
+    .fi_search .me_address .fi_a {
+      height: 46px;
+      background: #fff;
+      font-size: 13px;
+      color: #a2a2a2;
+      line-height: 46px;
+      padding-left: 14px; }
+    .fi_search .me_address .fi_b {
+      height: 30px;
+      width: 189px;
+      margin-left: 10px;
+      background: #f1f1f1;
+      font-size: 13px;
+      color: #555;
+      line-height: 30px;
+      padding-left: 14px; }
+    .fi_search .me_address .fi_c {
+      height: 30px;
+      width: 189px;
+      margin-left: 10px;
+      background: #fff;
+      font-size: 13px;
+      color: #555;
+      line-height: 30px;
+      padding-left: 14px; }
+  .fi_search .me_notice {
+    position: absolute;
+    left: 898px;
+    top: 0;
+    background: #fff;
+    display: none;
+    width: 240px;
+    height: 158px;
+    z-index: 2;
+    box-shadow: 0 0 8px; }
+    .fi_search .me_notice ul li {
+      width: 221px;
+      height: 37px;
+      background: #fff;
+      line-height: 37px;
+      margin-left: 13px;
+      border-bottom: 1px dashed #ddd; }
+    .fi_search .me_notice ul .ulp {
+      border: none;
+      color: #64a131;
+      text-align: center; }
   .fi_search .fi_search_left {
     width: 417px;
     height: 120px;
