--- a/src/css/home.css
+++ b/src/css/home.css
@@ -1,6 +1,7 @@
 .fi_box {
   width: 100%;
-  height: 202px; }
+  height: 202px;
+  background: #fff; }
   .fi_box .fi_fruit {
     width: 1283px;
     height: 202px;
@@ -36,12 +37,13 @@
   position: absolute;
   width: 311px;
   height: 400px;
-  left: 0;
+  left: 1075px;
   top: 0; }
 
 .fi_shop {
   width: 100%;
-  height: 740px; }
+  height: 740px;
+  background: #fff; }
   .fi_shop .fi_shop_home {
     width: 1283px;
     height: 740px;
@@ -99,3 +101,15 @@
         .fi_shop .fi_shop_home .fi_shop_center ul li:hover img {
           transform: scale(1.1);
           transition: all 0.5s; }
+
+.fi_body {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  display: none;
+  background: rgba(204, 204, 204, 0.3);
+  z-index: 600; }
+
+/*# sourceMappingURL=home.css.map */
