--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -1,6 +1,7 @@
 .fi_box{
 	width:100%;
 	height:202px;
+	background:#fff;
 	.fi_fruit{
 		width:1283px;
 		height:202px;
@@ -40,12 +41,13 @@
 	position: absolute;
 	width:311px;
 	height:400px;
-	left:0;
+	left:1075px;
 	top:0;
 }
 .fi_shop{
 	width:100%;
 	height:740px;
+	background:#fff;
 	.fi_shop_home{
 		width:1283px;
 		height:740px;
@@ -120,4 +122,14 @@
 			}
 		}
 	}
+}
+.fi_body{
+	width:100%;
+	height:100%;
+	position: fixed;
+	left:0;
+	top:0;
+	display: none;
+	background:rgba(204,204,204,.3);
+	z-index:600;
 }
